objects/Account.object
<CustomObject>
    <fields>
        <fullName>Contract_Furniture_Pot__c</fullName>
        <label>Contract Furniture Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_TY__c</fullName>
        <label>Contract Furniture TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copier_Fleet_Expiration_Date__c</fullName>
        <label>Copier Fleet Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copiers__c</fullName>
        <description>INTEG - N || CODE - N ||  WF - N || AP - N || VAL - N || Case - unknown || # Copiers</description>
        <label># Copiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Dept__c</fullName>
        <description>Created for Story #S-357920</description>
        <label>Cost Centre Dept</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>MEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_flag__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <label>Coupon flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Flag__c</fullName>
        <formula>IF(OR(DNBI_CREDIT_OUTCOME__c = &quot;Declined&quot;, DNBI_CREDIT_OUTCOME__c = &quot;Manually Declined&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;),
IF(DNBI_CREDIT_OUTCOME__c = &quot;ByPass&quot;, IMAGE(&quot;/img/func_icons/ispan12.gif&quot;, &quot;bypass&quot;),
IF(AND(DNBI_CREDIT_OUTCOME__c = &quot;Approved&quot;, DNBI_FSS_Score__c &gt;= 4), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;),
IF(AND(DNBI_CREDIT_OUTCOME__c = &quot;Approved&quot;, DNBI_FSS_Score__c &lt; 4), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),
IF(DNBI_CREDIT_OUTCOME__c = &quot;Approved&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;),&quot;&quot;)))))</formula>
        <inlineHelpText>Green -&gt; Low Risk
Yellow -&gt; Medium Risk
Red -&gt; High Risk
ByPass -&gt; Warm Lead by DnB</inlineHelpText>
        <label>Credit Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_GPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current GPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <formula>if( $RecordType.Name = &quot;Site&quot;, AOPS_Seq_ID__c , 
if( $RecordType.Name = &quot;Customer&quot; &amp;&amp; Grandparent__c = &quot;No&quot;, AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;Parent&quot; , AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;Great Grandparent&quot; , AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;GrandParent&quot;  &amp;&amp; LEN(AOPS_Cust_Id__c) = 1, &quot;0000000&quot; + AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;GrandParent&quot; &amp;&amp; LEN(AOPS_Cust_Id__c) = 2, &quot;000000&quot; + AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;GrandParent&quot; &amp;&amp; LEN(AOPS_Cust_Id__c) = 3, &quot;00000&quot; + AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;GrandParent&quot; &amp;&amp; LEN(AOPS_Cust_Id__c) = 4, &quot;0000&quot; + AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;GrandParent&quot;  &amp;&amp; LEN(AOPS_Cust_Id__c) = 5, &quot;000&quot; + AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;GrandParent&quot;  &amp;&amp; LEN(AOPS_Cust_Id__c) = 6, &quot;00&quot; + AOPS_Cust_Id__c, 
if( $RecordType.Name = &quot;Customer (OfficeMax)&quot; ,OMX_Mainframe_Account_Number__c, 
if( $RecordType.Name = &quot;Site (OfficeMax)&quot; ,OMX_Mainframe_Account_Number__c+ &apos;-&apos;+OMX_Mainframe_Consignee_ID__c, 
if( $RecordType.Name = &quot;Site (GT)&quot; ,OMX_Primary_Key__c, 
if( $RecordType.Name = &quot;Customer (GT)&quot; ,OMX_Primary_Key__c, 
null 
))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Id__c</fullName>
        <label>Custom Core Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerOwnerWrong__c</fullName>
        <formula>if (AOPS_Seq_ID__c !=null &amp;&amp; RecordTypeId =&apos;012E00000008dTc&apos; &amp;&amp; Primary_Site__c = true   &amp;&amp;   Sales_PersonID__c != Related_Account__r.Sales_PersonID__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerOwnerWrong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Touch_Point__c</fullName>
        <label>Customer Contact Touch Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In-Store Visit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Visit to customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Converted_Date__c</fullName>
        <label>Customer Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Day_One_Plan__c</fullName>
        <description>PPE Education</description>
        <label>Customer Day One Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remote Working</fullName>
                </value>
                <value>
                    <fullName>Return to Work</fullName>
                </value>
                <value>
                    <fullName>Business Hybrid</fullName>
                </value>
                <value>
                    <fullName>Remote Learning</fullName>
                </value>
                <value>
                    <fullName>Return to School</fullName>
                </value>
                <value>
                    <fullName>Education Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Lifecycle__c</fullName>
        <label>Customer Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Penetration</fullName>
                </value>
                <value>
                    <fullName>At-Risk</fullName>
                </value>
                <value>
                    <fullName>At Risk High</fullName>
                    <label>At-Risk High</label>
                </value>
                <value>
                    <fullName>At Risk Low</fullName>
                    <label>At-Risk Low</label>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Restriction__c</fullName>
        <label>Customer Restriction</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Setup_Completed__c</fullName>
        <label>Customer Setup Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Setup_Requested__c</fullName>
        <label>Customer Setup Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Source__c</fullName>
        <description>We would like a new field added to salesforce.com on the customer and site page layouts.  This field would indicate the &quot;source&quot; of the customer for Inside Sales.  The field resources would not need access to the field.  The purpose of the field is to highlight for an inside rep which type of rep used to own the account.  As you can imagine, the initial conversation with a customer can be completely different if they used to be serviced by an on-site field rep vs an Outsourced Partner vs a Mailstream account that just received Marketing.  Values that we&apos;ve thought of include: Field Rep, Mailstream, and Outsourced Partner.  We would not need any logic applied to the field.  It can be freeform.  The SFDC Analyst in Austin would maintain the values of that field.  We are open to other suggestions on how to accomplish the same thing.  On Monday, accounts from the field are going to be swept into Inside Sales so we are looking to do this quickly.</description>
        <inlineHelpText>This field shows the customer source when available.  The initial conversation with a customer can be completely different if they had been serviced by an on-site field rep vs an Outsourced Partner vs a Mailstream account that just received Marketing.</inlineHelpText>
        <label>Customer Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Rep</fullName>
                </value>
                <value>
                    <fullName>Mailstream</fullName>
                </value>
                <value>
                    <fullName>Outsourced Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEPT_REQUIRED_CODE__c</fullName>
        <label>DEPT_REQUIRED_CODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI_Application_ID__c</fullName>
        <description>This hold the Application ID of the DNBI Process</description>
        <label>DNBI Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI_CREDIT_OUTCOME__c</fullName>
        <description>THIS IS CREATED BY MOHAN TO TEST THE CREDIT OUTCOME</description>
        <label>DNBI Credit Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI_FSS_Score__c</fullName>
        <description>This field will capture the &quot;Financial Stress Score&quot; from the DNBi API call.</description>
        <label>DNBI FSS Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBI_MatchScore__c</fullName>
        <description>This is to hold the Match Score of  address from the DNBI</description>
        <label>DNBI MatchScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Duns__c</fullName>
        <label>DUNS #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Minority_Business__c</fullName>
        <label>Minority Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Status__c</fullName>
        <label>DNB Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_WCW_Here__c</fullName>
        <label>WCW Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_WCW_Total__c</fullName>
        <label>WCW Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Year_Started__c</fullName>
        <label>Year Started</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DSM_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DW_Effective_Start_Date__c</fullName>
        <formula>DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DW Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Staging_TableID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Staging TableID</label>
        <referenceTo>Data_Staging_Table__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Customer_will_start_Day_One_Plan__c</fullName>
        <description>PPE Education</description>
        <label>Date Customer will start Day One Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Status_Modified__c</fullName>
        <label>Date Status Modified</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliver_Charge__c</fullName>
        <label>Deliver Charge</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diversity_Offering__c</fullName>
        <label>Diversity Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duns_Enrichment__c</fullName>
        <description>Duns Enrichment loaded October 7th, 2014</description>
        <label>Duns Enrichment</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns_Number__c</fullName>
        <description>Duns Number from Data Warehousing</description>
        <label>Duns Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns_from_Org_or_Account__c</fullName>
        <formula>Org__r.DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duns from Org or Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dupe ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Disposition__c</fullName>
        <description>Will be required for field to disposition in order to bypass DupeBlocker rules.</description>
        <label>Duplicate Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Restrictions</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Copy Print</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Employee Purchase (EPP)</fullName>
                </value>
                <value>
                    <fullName>Export Account</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Internal Programs (Corp Use)</fullName>
                </value>
                <value>
                    <fullName>Managed Print Services</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>SPC Purchases</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Date__c</fullName>
        <label>Email Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <inlineHelpText>Submit an Account Maintenance Request to update Opt In values</inlineHelpText>
        <label>Email Opt In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Provider__c</fullName>
        <label>Email Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Contractor_ID__c</fullName>
        <description>For Case 01265588</description>
        <label>Employee/Contractor ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Spend_CAD__c</fullName>
        <description>For Canadian Currency</description>
        <label>Account Potential (CAD)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Spend__c</fullName>
        <description>Estimated Annual Spend with OD</description>
        <label>Account Potential</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_OMax_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It displays records from Account object with Record Type Customer OfficeMax</description>
        <label>Existing OMax Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Customer (OfficeMax)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Existing OMax Account)</relationshipLabel>
        <relationshipName>omaxaccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Contract_Lock_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Provider Contract Lock-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Last_Updated_Date__c</fullName>
        <label>Existing Provider Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Monthly_Spend__c</fullName>
        <label>Existing Provider Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Name__c</fullName>
        <label>Existing Provider Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Renewal_Date__c</fullName>
        <label>Existing Provider Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Provider_Satisfaction__c</fullName>
        <label>Existing Provider Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failed_Reason__c</fullName>
        <label>Failed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Calc_Pot__c</fullName>
        <formula>Filing_Binding_Pot__c -  Filing_Binding_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing &amp; Binding Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Diff__c</fullName>
        <formula>Filing_Binding_TY__c  -  Filing_Binding_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing &amp; Binding Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_LY__c</fullName>
        <label>Filing &amp; Binding IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_LY_per__c</fullName>
        <formula>If((Filing_Binding_LY__c = 0 || Filing_Binding_LY__c = null), 0, (Filing_Binding_IMU_LY__c / Filing_Binding_LY__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing &amp; Binding IMU LY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_TY__c</fullName>
        <label>Filing &amp; Binding IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_IMU_TY_per__c</fullName>
        <formula>If((Filing_Binding_TY__c = 0 || Filing_Binding_TY__c = null), 0, (Filing_Binding_IMU_TY__c / Filing_Binding_TY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing &amp; Binding IMU TY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_LY__c</fullName>
        <description>Binders Sales Last Year</description>
        <inlineHelpText>Binders Sales Last Year</inlineHelpText>
        <label>Filing &amp; Binding LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Last_Order__c</fullName>
        <label>Filing &amp; Binding Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Last_Order_amt__c</fullName>
        <label>Filing &amp; Binding Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Pot__c</fullName>
        <description>Binders Potential</description>
        <inlineHelpText>Binders Potential</inlineHelpText>
        <label>Filing &amp; Binding Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_TY__c</fullName>
        <description>Binders Sales This Year</description>
        <inlineHelpText>Binders Sales This Year</inlineHelpText>
        <label>Filing &amp; Binding TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Binding_Total_LY__c</fullName>
        <label>Filing &amp; Binding Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Order_Date__c</fullName>
        <label>First Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Purchase_Date_Time__c</fullName>
        <formula>DATETIMEVALUE ( First_Purchase_Date__c ) + (9/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Purchase Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Purchase_Date__c</fullName>
        <description>Used by the formula field First_Purchase_Date_Time__c.  Formula is used to convert this field (a Date only field) to a Date/Time field.  Field must be of Date/Time to use DB filters alongside Create Date.  

NOTE: This field is hidden from all users.</description>
        <label>First Purchase Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Recurring_Purchase_Date_Time__c</fullName>
        <formula>DATETIMEVALUE ( First_Recurring_Purchase_Date__c ) + (9/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Recurring Purchase Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Recurring_Purchase_Date__c</fullName>
        <label>First Recurring Purchase Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Recurring_Product_Count__c</field>
            <operation>notEqual</operation>
            <value>,0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Note__c</fullName>
        <label>Follow Up Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Customer_Flag__c</fullName>
        <label>Forms Customer Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Forwarder_Account__c</fullName>
        <label>Freight Forwarder Account</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Surcharge__c</fullName>
        <label>Pays Fuel Surcharge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Furniture_Calc_Pot__c</fullName>
        <formula>Furniture_Pot__c  -  Furniture_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Furniture Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Diff__c</fullName>
        <formula>Furniture_TY__c  -  Furniture_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Furniture Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_LY__c</fullName>
        <label>Furniture IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_LY_per__c</fullName>
        <formula>If((Furniture_LY__c = 0 || Furniture_LY__c = null), 0, Furniture_IMU_LY__c / Furniture_LY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Furniture IMU LY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_TY__c</fullName>
        <label>Furniture IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU_TY_per__c</fullName>
        <formula>If((Furniture_TY__c = 0 || Furniture_TY__c = null), 0, Furniture_IMU_TY__c / Furniture_TY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Furniture IMU TY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Furniture_LY__c</fullName>
        <description>Furniture YTD Sales Last Year</description>
        <inlineHelpText>Furniture YTD Sales Last Year</inlineHelpText>
        <label>Furniture LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Last_Order__c</fullName>
        <label>Furniture Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Furniture_Pot__c</fullName>
        <description>Furniture Potential</description>
        <inlineHelpText>Furniture Potential</inlineHelpText>
        <label>Furniture Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_TY__c</fullName>
        <description>Furniture Sales this Year</description>
        <inlineHelpText>Furniture Sales this Year</inlineHelpText>
        <label>Furniture TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Total_LY__c</fullName>
        <label>Furniture Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_last_order_amt__c</fullName>
        <label>Furniture Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Use_Reserved__c</fullName>
        <label>Future Use Reserved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGP_Id__c</fullName>
        <externalId>true</externalId>
        <label>GGP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPO_Site_Status__c</fullName>
        <label>GPO Site Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Id__c</fullName>
        <label>GP Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GParent_GPID__c</fullName>
        <label>GParent GPID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>